# OSE

./: .env.example  .gitignore  README.md  ose  pyproject.toml  test_scaffolding.py
actors/: __init__.py  base.py  llm_actor.py  persona.py
actors/prompts/: decision.txt  system.txt
analysis/: __init__.py  __main__.py  analyst.py  engine.py  graphs.py  renderer.py  report.py
cli/: __init__.py  ose.py  run.py
engine/: __init__.py  actions.py  capabilities.py  cascade.py  costs.py  event_generation.py  loop.py  perception.py  pressures.py  resolver.py  scenario_template.py  validator.py
experiments/: __init__.py  runner.py
logs/: __init__.py  logger.py
providers/: __init__.py  anthropic_provider.py  base.py  factory.py  openrouter_provider.py
research/: README.md  codex_scaffolding_prompt.md  open_ended_scenario_engine_note.md  ose_research_document.tex
scenarios/: __init__.py  base.py  taiwan_strait.py
scoring/: __init__.py  bci.py  fidelity.py
tests/: test_action_registry.py  test_analysis_reporting.py  test_analytics_model_config.py  test_cli_env_defaults.py  test_doctrine_profiles.py  test_event_generation.py  test_open_ended_engine.py  test_ose_launcher.py  test_provider_integration.py
world/: __init__.py  capabilities.py  events.py  graph.py  pressures.py  state.py
