[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ose"
version = "0.1.0"
description = "Omni-Simulation Engine — LLM-driven geopolitical conflict simulation research framework"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.40.0",
    "openai>=1.30.0",
    "pydantic>=2.0.0",
    "rich>=13.0.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
ose = "cli.ose:main"
ose-run = "cli.run:main"
ose-report = "analysis.report:main"
ose-analyze = "analysis.__main__:main"

[project.optional-dependencies]
graph = ["networkx>=3.0"]
dev = ["pytest>=8.0.0", "pytest-asyncio>=0.23.0"]

[tool.hatch.build.targets.wheel]
packages = ["world", "actors", "engine", "scenarios", "cli", "logs", "scoring", "experiments", "analysis"]
